<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/title" />

        <RadioButton
            android:id="@+id/rbType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/type" />

        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/date" />

        <RadioButton
            android:id="@+id/rbSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/size" />

    </RadioGroup>

    <View
        android:id="@+id/viewSort"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@color/view_bg" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/rbDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio_button"
            android:padding="@dimen/_5sdp"
            android:text="@string/descending" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSortCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_button_unselected"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/dialog_text"
            android:textSize="@dimen/_12sdp"
            app:chainUseRtl="true"
            app:layout_constraintEnd_toStartOf="@+id/btnDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/bg_button_unselected"
            android:backgroundTint="@color/red"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSortCancel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>