<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgCommon"
    tools:context=".welcomeActivity.WelcomeActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvWelcomePdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWelcomePdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pdf_reader"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivWelcomePdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivWelcomePdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/welcome_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcomePdf" />

    <CheckBox
        android:id="@+id/welCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:button="@drawable/bg_check_box"
        android:padding="@dimen/_5sdp"
        android:text="@string/welcome_check_msg"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnGetStart"
        app:layout_constraintEnd_toStartOf="@+id/tvPrivacyPolicy"
        app:layout_constraintStart_toStartOf="@+id/btnGetStart"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policy_privacy"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@+id/welCheckbox"
        app:layout_constraintStart_toEndOf="@+id/welCheckbox"
        app:layout_constraintTop_toTopOf="@+id/welCheckbox"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/red"
        android:paddingVertical="@dimen/_14sdp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>