<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgOffGray"
    android:orientation="vertical"
    tools:context=".settingsActivity.SettingActivity">

    <include
        android:id="@+id/settingToolbar"
        layout="@layout/home_toolbar" />

    <View
        android:id="@+id/viewFavorite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/view_bg" />

    <TextView
        android:id="@+id/tvGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/general"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_storage"
                app:layout_constraintBottom_toBottomOf="@+id/tvSavePathLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvSavePath" />

            <TextView
                android:id="@+id/tvSavePath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/save_path"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@+id/ivStorage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSavePathLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                tools:text="Storage/emulated/0/img-2-pdf"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/ivStorage"
                app:layout_constraintTop_toBottomOf="@+id/tvSavePath" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/viewRecent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:background="@color/view_bg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_language"
                app:layout_constraintBottom_toBottomOf="@+id/tvSelectLanguage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvLanguage" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@+id/ivLanguage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSelectLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                tools:text="@string/english_us"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/ivLanguage"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/other"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/llInviteFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drawer_share" />

            <TextView
                android:id="@+id/tvInvite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/invite_friends"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:id="@+id/llFeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivFeedBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_feedback" />

            <TextView
                android:id="@+id/tvFeedBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:background="@color/view_bg" />

        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_privacy_policy" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        tools:text="V.01.01.1" />

</LinearLayout>